# RakutenAPI-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/: main.py
src/rakuten_api/: __init__.py  client.py  models.py
tests/: test_rakuten_client.py
