[project]
name = "rakuten-api-mcp"
version = "1.0.1"
description = "楽天のAPIを介して楽天市場や楽天ブックスの情報を検索する MCP サーバー"
authors = [
    { name = "Marumasa" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rakuten_api"]
